学习了日志收集架构